public/stylesheets/style.css
body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  margin: 0;
}

div.header {
  margin: 2em 12em;
  text-align: center;
}

div.header h1 {
  font-size: xx-large;
}

a {
  color: #1C94C4;
}

div#toc {
  position: fixed;
  height: 100%;
  padding: 2em;
  background-image: url(cakeshow-light-theme/images/ui-bg_highlight-soft_100_eeeeee_1x100.png);
  background-repeat: repeat no-repeat;
  background-color: #EEE;
  border-right: 1px solid #DDD;
  font-weight: bold;
}

div#toc > ul {
  list-style-type: none;
  padding-left: 0;
}

div.content-column {
  padding: 1em 4em;
  margin: 0 auto;
  width: 60em;
}

div.search-fields {
  float: right;
  padding: 0.25em 0.5em;
}

a.next {
  float: right;
}

ul#registrant-signups {
  list-style-type: none;
  padding-left: 0;
}

ul#registrant-signups li {
  margin-bottom: 2em;
}

.registrant-name {
  font-size: large;
  font-weight: bold;
  padding-bottom: 0.5ex;
}

.signup-cell {
  padding-bottom: 0.5ex;
}

.entry-cell {
  padding: 1px 0.5em;
}

